Update title and header from 'Thangpum' to 'TP Digital'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thangpum | App Developer</title>
+    <title>TP Digital | App Developer</title>
     <style>
         :root {
             --bg: #ffffff;
@@ -61,7 +61,7 @@
 
     <div class="container">
         <header>
-            <h1>Thangpum</h1>
+            <h1>TP Digital</h1>
             <p class="subtitle">Independent App & Game Developer</p>
         </header>
 
@@ -94,7 +94,7 @@
         </p>
 
         <footer>
-            &copy; 2026 Thangpum. Built with GitHub Pages.
+            &copy; 2026 TP Digital Built with GitHub Pages.
         </footer>
     </div>
 
