Remove Star Bloom project card and update footer

--- a/index.html
+++ b/index.html
@@ -102,19 +102,14 @@
             <p class="project-desc">A comprehensive digital worship songbook app designed for the community.</p>
         </div>
 
-        <div class="project-card">
-            <h3 class="project-title">Star Bloom</h3>
-            <p class="project-desc">An artistic exploration of growth and environment through interactive mobile gameplay.</p>
-        </div>
-
         <div class="footer-links">
             <p>
                 <a href="mailto:your-email@example.com">Support</a> &bull; 
                 <a href="https://github.com/thangpum">GitHub</a> &bull; 
-                <a href="/app-ads.txt">App-Ads.txt</a>
+                <a href="/app-ads.txt">Ad Spec</a>
             </p>
             <p style="font-size: 13px; color: #86868b; margin-top: 20px;">
-                &copy; 2026 TP Digital. Based in Shillong.
+                &copy; 2026 TP Digital.
             </p>
         </div>
     </div>
