--- a/privacy-labute.html
+++ b/privacy-labute.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Privacy Policy for Labute</h1>
+        <h1>Privacy Policy</h1>
         <p>This privacy policy applies to the <strong>Labute</strong> application (hereby referred to as "Application") for mobile devices that was created by <strong>TP Digital</strong> (hereby referred to as "Service Provider") as a Free service. This service is intended for use "AS IS".</p>
 
         <h2>Information Collection and Use</h2>
