--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
         <div class="project-card">
             <h3 class="project-title">Labute</h3>
-            <p class="project-desc">A collection of worship and devotional song lyrics.</p>
+            <p class="project-desc">A collection of worship and devotional song lyrics in Paite.</p>
         </div>
 
         <div class="footer-links">
